--- a/backend-chat-ai/src/main/resources/application.properties
+++ b/backend-chat-ai/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=backend-chat-ai
 spring.ai.openai.api-key=${OPENAI_APIKEY:}
+spring.ai.openai.chat.options.model=gpt-4o-mini
