--- a/backend-chat-ai/src/main/resources/application.properties
+++ b/backend-chat-ai/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=backend-chat-ai
-spring.ai.openai.api-key=${OPENAI_APIKEY:}
-spring.ai.openai.chat.options.model=gpt-4o-mini
+spring.ai.azure.openai.api-key=${OPENAI_APIKEY:}
+spring.ai.azure.openai.endpoint=${OPENAI_ENDPOINT:}
+spring.ai.openai.chat.options.model=gpt-4o
