feat: enable actuator

--- a/backend-chat-ai/src/main/resources/application.properties
+++ b/backend-chat-ai/src/main/resources/application.properties
@@ -4,3 +4,10 @@ spring.ai.azure.openai.endpoint=${OPENAI_ENDPOINT:}
 spring.ai.azure.openai.chat.options.deployment-name=${OPENAI_CHAT_DEPLOYMENT:gpt-4o}
 spring.ai.azure.openai.chat.options.temperature=${OPENAI_CHAT_TEMPERATURE:0.7}
 spring.ai.openai.chat.options.model=${OPENAI_MODEL:gpt-4o}
+server.port=8080
+management.server.port=9000
+management.endpoint.health.show-details=always
+management.endpoint.health.show-components=always
+management.endpoints.web.cors.allowed-headers=*
+management.endpoints.web.cors.allowed-origins=*
+management.endpoints.web.cors.max-age=3600s
