--- a/backend-chat-ai-azure/src/main/resources/application.properties
+++ b/backend-chat-ai-azure/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=backend-chat-ai
-spring.ai.azure.openai.api-key=${OPENAI_APIKEY:}
-spring.ai.azure.openai.endpoint=${OPENAI_ENDPOINT:}
+spring.ai.azure.openai.api-key=${OPENAI_APIKEY:changeme}
+spring.ai.azure.openai.endpoint=${OPENAI_ENDPOINT:changeme.openai.endpoint.com}
 spring.ai.azure.openai.chat.options.deployment-name=${OPENAI_CHAT_DEPLOYMENT:gpt-4o}
 spring.ai.azure.openai.chat.options.temperature=${OPENAI_CHAT_TEMPERATURE:0.7}
 spring.ai.openai.chat.options.model=${OPENAI_MODEL:gpt-4o}
