--- a/backend-chat-ai-azure/pom.xml
+++ b/backend-chat-ai-azure/pom.xml
@@ -55,6 +55,9 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+                			<mainClass>br.com.marcoshssilva.ai.backend.chat.ai.azure.BackendChatAiApplication</mainClass>
+            			</configuration>
 			</plugin>
 		</plugins>
 	</build>
