fix: set maven package instead install and fixed env JAVA_OPTS

--- a/backend-chat-ai-azure/Dockerfile
+++ b/backend-chat-ai-azure/Dockerfile
@@ -2,13 +2,12 @@ FROM maven:3.9.5-eclipse-temurin-21 AS base-builder
 FROM base-builder AS build
 
 WORKDIR /build
-# install dependencies
+
 COPY pom.xml /build/pom.xml
 RUN mvn dependency:go-offline
-# copy source code
+
 COPY src /build/src
-# generate jar
-RUN mvn install
+RUN mvn package
 
 FROM eclipse-temurin:21-jre-jammy AS base-runner
 FROM base-runner AS runner
@@ -25,10 +24,13 @@ USER apprunner
 
 ENV PATH="/opt/java/openjdk/bin:/usr/local/sbin:/usr/local/bin:/usr/sbin:/usr/bin:/sbin:/bin"
 ENV JAVA_HOME="/opt/java/openjdk"
+ENV JAVA_OPTS="-XX:+UseContainerSupport -XX:MaxRAMPercentage=80"
 ENV LC_ALL="en_US.UTF-8"
 ENV LANG="en_US.UTF-8"
 
-ENTRYPOINT java -XX:+UseContainerSupport -XX:MaxRAMPercentage=80 "$JAVA_OPTS" -jar /app/app.jar
+ARG JAVA_OPTS=$JAVA_OPTS
+
+ENTRYPOINT java $JAVA_OPTS -jar /app/app.jar
 
 EXPOSE 8080
 EXPOSE 9000
