feat: include default properties to image generator

--- a/backend-chat-ai-azure/src/main/resources/application.properties
+++ b/backend-chat-ai-azure/src/main/resources/application.properties
@@ -4,6 +4,8 @@ spring.ai.azure.openai.endpoint=${OPENAI_ENDPOINT:changeme.openai.endpoint.com}
 spring.ai.azure.openai.chat.options.deployment-name=${OPENAI_CHAT_DEPLOYMENT:gpt-4o}
 spring.ai.azure.openai.chat.options.temperature=${OPENAI_CHAT_TEMPERATURE:0.7}
 spring.ai.azure.openai.chat.options.model=${OPENAI_CHAT_MODEL:gpt-4o}
+spring.ai.azure.openai.image.options.deployment-name=${OPENAI_IMAGE_DEPLOYMENT:dall-e-3}
+spring.ai.azure.openai.image.options.model=${OPENAI_IMAGE_MODEL:dall-e-3}
 server.port=8080
 management.server.port=9000
 management.endpoint.health.show-details=always
